<resources>
    <string name="app_name">DnD companion app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_word">Add Character</string>
    <string name="hint_word">Character name...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="hint_lvl">Character level...</string>
    <string name="hint_class">Character class...</string>
    <string name="hint_race">Character race...</string>
    <string name="hint_str">Character strength score...</string>
    <string name="hint_dex">Character dexterity score...</string>
    <string name="hint_con">Character constitution score...</string>
    <string name="hint_int">Character intelligence score...</string>
    <string name="hint_wis">Character wisdom score...</string>
    <string name="hint_cha">Character charisma score...</string>

    <string name="hint_delete">Which character you wish to delete (Id)...</string>
    <string name="button_delete">Delete</string>

    <string name="delete">Delete</string>
    <string name="neutral">Neutral</string>
    <string name="resistant">Resistant</string>
    <string name="weak">Weak</string>
</resources>