<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sumActivity"
    android:background="@color/background">

    <EditText
        android:id="@+id/eText2"
        android:layout_width="109dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="number"
        android:text="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="how many dices?"
        app:layout_constraintBottom_toTopOf="@+id/eText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.979" />

    <TextView
        android:id="@+id/tView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:text="How many sides?"
        app:layout_constraintBottom_toTopOf="@+id/eText2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/eText3"
        android:layout_width="108dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="number"
        android:text="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992" />

    <LinearLayout
        android:id="@+id/pLayout"
        android:layout_width="409dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <Button
        android:id="@+id/bRoll2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:text="Roll!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/eText3"/>

    <TextView
        android:id="@+id/tViewSum"
        android:layout_width="69dp"
        android:layout_height="37dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:text="20"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tView4"
        android:layout_width="97dp"
        android:layout_height="24dp"
        android:layout_marginEnd="12dp"
        android:text="Your Sum was:"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tViewSum"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

    <RadioGroup
        android:id="@+id/rGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/tView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toEndOf="@+id/tView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995">

        <RadioButton
            android:id="@+id/rButtonWeak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weak" />

        <RadioButton
            android:id="@+id/rButtonRes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resistant" />

        <RadioButton
            android:id="@+id/rButtonNeutral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/neutral" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>